Replace punctum logo

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                   </div>
                   <div>
                     <a href="https://punctumbooks.com" class="col-3">
-                        <img src="images/company-images/punctumbooks.jpg" alt="Punctum Books"/>
+                        <img src="images/company-images/punctumbooks.png" alt="Punctum Books"/>
                     </a>
                     <a href="https://openhumanitiespress.org" class="col-3">
                         <img src="images/company-images/ohp.gif" alt="Open Humanities Press"/>
