--- a/constitution.html
+++ b/constitution.html
@@ -250,10 +250,7 @@
                                 <a href="/#banner">Home</a>
                             </li>
                             <li>
-                                <a href="/#about">About Us</a>
-                            </li>
-                            <li>
-                                <a href="/#infrastructure">Open Infrastructure</a>
+                                <a href="/#members">Members</a>
                             </li>
                             <li>
                                 <a class="active-important" href="/constitution.html">Constitution</a>
@@ -263,9 +260,6 @@
                             </li>
                             <li>
                                 <a href="https://www.oapen.org/topic/15632108-scholarled">Our Books</a>
-                            </li>
-                            <li>
-                                <a href="/#more">More</a>
                             </li>
                             <li>
                                 <a href="https://blog.scholarled.org">Blog</a>
