--- a/index.html
+++ b/index.html
@@ -149,10 +149,7 @@
                                 <a href="#banner">Home</a>
                             </li>
                             <li>
-                                <a href="#about">About Us</a>
-                            </li>
-                            <li>
-                                <a href="#infrastructure">Open Infrastructure</a>
+                                <a href="#members">Members</a>
                             </li>
                             <li>
                                 <a href="/constitution.html">Constitution</a>
@@ -162,9 +159,6 @@
                             </li>
                             <li>
                                 <a href="https://www.oapen.org/topic/15632108-scholarled">Our Books</a>
-                            </li>
-                            <li>
-                                <a href="#more">More</a>
                             </li>
                             <li>
                                 <a href="https://blog.scholarled.org">Blog</a>
