--- a/join.html
+++ b/join.html
@@ -146,13 +146,10 @@
                     <nav id="nav-main">
                         <ul>
                             <li>
-                                <a href="#banner">Home</a>
+                                <a href="/#banner">Home</a>
                             </li>
                             <li>
-                                <a href="#about">About Us</a>
-                            </li>
-                            <li>
-                                <a href="#infrastructure">Open Infrastructure</a>
+                                <a href="/#members">Members</a>
                             </li>
                             <li>
                                 <a href="/constitution.html">Constitution</a>
@@ -162,9 +159,6 @@
                             </li>
                             <li>
                                 <a href="https://www.oapen.org/topic/15632108-scholarled">Our Books</a>
-                            </li>
-                            <li>
-                                <a href="#more">More</a>
                             </li>
                             <li>
                                 <a href="https://blog.scholarled.org">Blog</a>
