--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <div class="section-heading">
                     <h1>Scaling Small</h1>
                     <p>
-                        ScholarLed is a consortium of five scholar-led, not-for-profit, open access book publishers that was formed in 2018. Individually we comprise <a href="https://www.matteringpress.org" target="_blank">Mattering Press</a>, <a href="https://meson.press" target="_blank">meson press</a>, <a href="https://www.openbookpublishers.com" target="_blank">Open Book Publishers</a>, <a href="https://openhumanitiespress.org" target="_blank">Open Humanities Press</a>, and <a href="https://punctumbooks.com" target="_blank">punctum books</a>, and collectively we are seeking to develop powerful, practical ways for small-scale, scholar-led Open Access presses to grow and flourish in a publishing landscape that is changing rapidly. We want to make sure that change is for the better.
+                        ScholarLed is a consortium of five scholar-led, not-for-profit, open access book publishers that was formed in 2018. Individually we comprise <a href="https://www.matteringpress.org" target="_blank">Mattering Press</a>, <a href="https://meson.press" target="_blank">meson press</a>, <a href="https://www.openbookpublishers.com" target="_blank">Open Book Publishers</a>, and <a href="https://punctumbooks.com" target="_blank">punctum books</a>, and collectively we are seeking to develop powerful, practical ways for small-scale, scholar-led Open Access presses to grow and flourish in a publishing landscape that is changing rapidly. We want to make sure that change is for the better.
                     </p>
                      <p>
                         We asked ourselves: how can we ‘scale’ the work we do as presses, while preserving the advantages of being small, academic-led publishers with distinct identities and priorities? Instead of aiming to fit within the current infrastructures, processes, and priorities of a publishing system that tends to serve larger (often commercial) presses, we want to establish collaborative modes of working and to build infrastructures that will support the work of publishers like ours, in order to enable more such presses to grow and flourish.
@@ -236,16 +236,13 @@
                     <a href="https://www.matteringpress.org" class="col-3">
                         <img src="images/company-images/mattering-press.png" alt="Mattering Press"/>
                     </a>
+                  </div>
+                  <div>
                     <a href="https://meson.press" class="col-3">
                         <img src="images/company-images/mesonpress.jpg" alt="Meson Press"/>
                     </a>
-                  </div>
-                  <div>
                     <a href="https://punctumbooks.com" class="col-3">
                         <img src="images/company-images/punctumbooks.png" alt="Punctum Books"/>
-                    </a>
-                    <a href="https://openhumanitiespress.org" class="col-3">
-                        <img src="images/company-images/ohp.gif" alt="Open Humanities Press"/>
                     </a>
                   </div>
 
