--- a/join.html
+++ b/join.html
@@ -8,7 +8,7 @@
 
     <!--Meta Keywords and Description-->
     <meta name="keywords" content="openaccess,OA,ScholarLed,Non-profit,scholar-led,academic-led,open,infrastructure,open-source">
-    <meta name="description" content="ScholarLed is a consortium of five scholar-led, not-for-profit, open access book publishers that was formed in 2018. We are seeking to develop powerful, practical ways for small-scale, scholar-led Open Access presses to grow and flourish in a publishing landscape that is changing rapidly. We want to make sure that change is for the better.">
+    <meta name="description" content="ScholarLed is a consortium of four scholar-led, not-for-profit, open access book publishers that was formed in 2018. We are seeking to develop powerful, practical ways for small-scale, scholar-led Open Access presses to grow and flourish in a publishing landscape that is changing rapidly. We want to make sure that change is for the better.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <meta name="web_author" content="Javier Arias, javi@openbookpublishers.com">
     <meta name="google-site-verification" content="t89whJD-hom3oldPAt8x9U7vQOQSAqFQpAtU9QzKqFI" />
@@ -48,7 +48,7 @@
       "@type": "Organization",
       "name": "ScholarLed",
       "alternateName": "ScholarLed Open Access Presses",
-      "description": "ScholarLed is a consortium of five scholar-led, not-for-profit, open access book publishers that was formed in 2018. We are seeking to develop powerful, practical ways for small-scale, scholar-led Open Access presses to grow and flourish in a publishing landscape that is changing rapidly. We want to make sure that change is for the better.",
+      "description": "ScholarLed is a consortium of four scholar-led, not-for-profit, open access book publishers that was formed in 2018. We are seeking to develop powerful, practical ways for small-scale, scholar-led Open Access presses to grow and flourish in a publishing landscape that is changing rapidly. We want to make sure that change is for the better.",
       "url": "https://scholarled.org",
       "logo": "https://scholarled.org/images/logo.png",
       "email": "info@scholarled.org",
