--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!--Meta Keywords and Description-->
     <meta name="keywords" content="openaccess,OA,ScholarLed,Non-profit,scholar-led,academic-led,open,infrastructure,open-source">
-    <meta name="description" content="ScholarLed is a consortium of four scholar-led, not-for-profit, open access book publishers that was formed in 2018. We are seeking to develop powerful, practical ways for small-scale, scholar-led Open Access presses to grow and flourish in a publishing landscape that is changing rapidly. We want to make sure that change is for the better.">
+    <meta name="description" content="ScholarLed is a consortium of scholar-led, not-for-profit, open access book publishers that was formed in 2018. We are seeking to develop powerful, practical ways for small-scale, scholar-led Open Access presses to grow and flourish in a publishing landscape that is changing rapidly. We want to make sure that change is for the better.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <meta name="web_author" content="Javier Arias, javi@openbookpublishers.com">
     <meta name="google-site-verification" content="t89whJD-hom3oldPAt8x9U7vQOQSAqFQpAtU9QzKqFI" />
@@ -48,7 +48,7 @@
       "@type": "Organization",
       "name": "ScholarLed",
       "alternateName": "ScholarLed Open Access Presses",
-      "description": "ScholarLed is a consortium of four scholar-led, not-for-profit, open access book publishers that was formed in 2018. We are seeking to develop powerful, practical ways for small-scale, scholar-led Open Access presses to grow and flourish in a publishing landscape that is changing rapidly. We want to make sure that change is for the better.",
+      "description": "ScholarLed is a consortium of scholar-led, not-for-profit, open access book publishers that was formed in 2018. We are seeking to develop powerful, practical ways for small-scale, scholar-led Open Access presses to grow and flourish in a publishing landscape that is changing rapidly. We want to make sure that change is for the better.",
       "url": "https://scholarled.org",
       "logo": "https://scholarled.org/images/logo.png",
       "email": "info@scholarled.org",
@@ -182,7 +182,7 @@
                 <div class="section-heading">
                     <h1>Scaling Small</h1>
                     <p>
-                        ScholarLed is a consortium of four scholar-led, not-for-profit, open access book publishers that was formed in 2018. Individually we comprise <a href="https://www.matteringpress.org" target="_blank">Mattering Press</a>, <a href="https://meson.press" target="_blank">meson press</a>, <a href="https://www.openbookpublishers.com" target="_blank">Open Book Publishers</a>, and <a href="https://punctumbooks.com" target="_blank">punctum books</a>, and collectively we are seeking to develop powerful, practical ways for small-scale, scholar-led Open Access presses to grow and flourish in a publishing landscape that is changing rapidly. We want to make sure that change is for the better.
+                        ScholarLed is a consortium of scholar-led, not-for-profit, open access book publishers that was formed in 2018. Individually we comprise <a href="https://www.matteringpress.org" target="_blank">Mattering Press</a>, <a href="https://meson.press" target="_blank">meson press</a>, <a href="https://www.openbookpublishers.com" target="_blank">Open Book Publishers</a>, <a href="https://punctumbooks.com" target="_blank">punctum books</a>, <a href="https://www.africanminds.co.za/" target="_blank">African Minds</a>, and <a href="https://www.mediastudies.press/" target="_blank">mediastudies.press</a>, and collectively we are seeking to develop powerful, practical ways for small-scale, scholar-led Open Access presses to grow and flourish in a publishing landscape that is changing rapidly. We want to make sure that change is for the better.
                     </p>
                      <p>
                         We asked ourselves: how can we ‘scale’ the work we do as presses, while preserving the advantages of being small, academic-led publishers with distinct identities and priorities? Instead of aiming to fit within the current infrastructures, processes, and priorities of a publishing system that tends to serve larger (often commercial) presses, we want to establish collaborative modes of working and to build infrastructures that will support the work of publishers like ours, in order to enable more such presses to grow and flourish.
@@ -236,6 +236,9 @@
                     <a href="https://www.matteringpress.org" class="col-3">
                         <img src="images/company-images/mattering-press.png" alt="Mattering Press"/>
                     </a>
+                    <a href="https://www.mediastudies.press/" class="col-3">
+                        <img src="images/company-images/mediastudies-press.png" alt="Media Studies Press"/>
+                    </a>
                   </div>
                   <div>
                     <a href="https://meson.press" class="col-3">
@@ -243,6 +246,9 @@
                     </a>
                     <a href="https://punctumbooks.com" class="col-3">
                         <img src="images/company-images/punctumbooks.png" alt="Punctum Books"/>
+                    </a>
+                    <a href="https://www.africanminds.co.za/" class="col-3">
+                        <img src="images/company-images/african-minds.png" alt="African Minds"/>
                     </a>
                   </div>
 
