Update catalogue URL

--- a/join.html
+++ b/join.html
@@ -158,7 +158,7 @@
                                 <a class="active-important" href="/join.html">Join</a>
                             </li>
                             <li>
-                                <a href="https://www.oapen.org/topic/15632108-scholarled">Our Books</a>
+                                <a href="https://simonxix.github.io/scholarled_catalogue/">Our Books</a>
                             </li>
                             <li>
                                 <a href="https://blog.scholarled.org">Blog</a>
