--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
                 <!--Call to Action-->
                 <a href="mailto:info@scholarled.org" class="button">CONTACT US</a>
-                <a href="https://www.oapen.org/topic/15632108-scholarled" class="button" style="margin-left: 5px;">OUR BOOKS</a>
+                <a href="https://simonxix.github.io/scholarled_catalogue/" class="button" style="margin-left: 5px;">OUR BOOKS</a>
                 <!--End Call to Action-->
 
             </div>
