Update board membership

--- a/constitution.html
+++ b/constitution.html
@@ -912,10 +912,10 @@
                         <p>The number of Trustees is determined at five.</p>
                         <p>The following persons have been appointed as Trustees to the positions stated after their names:</p>
                         <ol style="list-style-position: inside; margin-left: 1em;">
-                            <li>mr V.W.J. van Gerven, chair;</li>
-                            <li>mrs J.T.L. Adema, secretary;</li>
+                            <li>mr Jefferson Pooley, chair;</li>
+                            <li>mrs Lucy Barnes, secretary;</li>
                             <li>mr J. McHardy, treasurer;</li>
-                            <li>mrs A. Tosi, general trustee,</li>
+                            <li>mrs F. van Schalkwyk, general trustee,</li>
                             <li>mr. A.R.K. Kirchner, general trustee.</li>
                         </ol>
                     </div>
