--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
                                 <a href="/join.html">Join</a>
                             </li>
                             <li>
+                                <a href="/salon.html">Salon</a>
+                            </li> 
+                            <li>
                                 <a href="https://simonxix.github.io/scholarled_catalogue/">Our Books</a>
                             </li>
                             <li>
