create initial salon page

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                 <a href="/join.html">Join</a>
                             </li>
                             <li>
-                                <a href="/join.html">Salon</a>
+                                <a href="/salon.html">Salon</a>
                             </li> 
                             <li>
                                 <a href="https://simonxix.github.io/scholarled_catalogue/">Our Books</a>
