--- a/salon.html
+++ b/salon.html
@@ -158,6 +158,9 @@
                                 <a class="active-important" href="/join.html">Join</a>
                             </li>
                             <li>
+                                <aclass="active-important" href="/salon.html">Salon</a>
+                            </li> 
+                            <li>
                                 <a href="https://simonxix.github.io/scholarled_catalogue/">Our Books</a>
                             </li>
                             <li>
