--- a/constitution.html
+++ b/constitution.html
@@ -259,6 +259,9 @@
                                 <a href="/join.html">Join</a>
                             </li>
                             <li>
+                                <a href="/salon.html">Salon</a>
+                            </li>  
+                            <li>
                                 <a href="https://simonxix.github.io/scholarled_catalogue/">Our Books</a>
                             </li>
                             <li>
