--- a/salon.html
+++ b/salon.html
@@ -155,10 +155,10 @@
                                 <a href="/constitution.html">Constitution</a>
                             </li>
                             <li>
-                                <a class="active-important" href="/join.html">Join</a>
+                                <a href="/join.html">Join</a>
                             </li>
                             <li>
-                                <aclass="active-important" href="/salon.html">Salon</a>
+                                <a class="active-important" href="/salon.html">Salon</a>
                             </li> 
                             <li>
                                 <a href="https://simonxix.github.io/scholarled_catalogue/">Our Books</a>
