update salon page

--- a/salon.html
+++ b/salon.html
@@ -182,39 +182,34 @@
     <!--Main Content Area-->
     <main id="content">
 
-        <!--Join-->
-        <section id="join" class="scrollto clearfix" style="margin-top: 20px;margin-bottom:100px;">
+        <!--Salon-->
+        <section id="salon" class="scrollto clearfix" style="margin-top: 20px;margin-bottom:100px;">
             <div class="row clearfix">
 
                 <div class="col-1">
 
                     <div class="section-heading">
-                        <h3>JOIN</h3>
-                        <h2 class="section-title">Join ScholarLed</h2>
+                        <h3>SALON</h3>
+                        <h2 class="section-title">The ScholarLed Salon</h2>
                         <p>
-                        ScholarLed is a consortium of open access book publishers providing ways for small-scale, scholar-led open access presses to grow and flourish. Together we establish collaborative modes of working and open infrastructures that support the work of publishers like ourselves.
+                        <em>The ScholarLed Salon series is an every-other-month gathering of scholar-led presses, devoted to an informal discussion and knowledge-sharing. <a href="https://scholarled.org">ScholarLed</a> is a consortium of open access book publishers providing ways for scholar-led open access presses to grow and flourish through mutual support. The Salon workshops--offered in the spirit of "brown bag" gatherings--feature a rotating cast of topics of interest to the community. The sessions are open to anyone interested in scholar-led publishing. Occasional sessions will be cross-organized with the <a href="https://openaccessbooksnetwork.hcommons.org">Open Access Books Network</a>.</em>
                         </p>
                         <p>
-                        ScholarLed presses are run by scholars and engaged in supporting and building communities of practice and care.
-                        </p>
-                        <ol style="margin-left: 2em">
-                          <li>ScholarLed member presses have published at least one book and commit to making all their publications open access without embargo;</li>
-                          <li>Our books are freely accessible without the requirement for registration of any kind;</li>
-                          <li>We care about the quality of the work we publish, and develop protocols for reviewing our publications that support community, care and the highest standards of scholarly content;</li>
-                          <li>We are committed to supporting the knowledge commons;</li>
-                          <li>In our online and offline presence, we strive to provide clear information about our mission, ethos, people involved, ownership and governance models, production and review process, funding models, and any author-facing charges;</li>
-                          <li>We share our practices, experiences, and models with each other in the spirit of mutual support.</li>
-                        </ol>
+                        Questions? Please write to <a href="mailto:info@scholarled.org">info@scholarled.org</a></p>
+                        <h3>Schedule and Zoom Link</h3>
+                        <p><em>Fourth Friday, every other month, 12:00 UTC</em></p>
+                        <p>[button]</p>
+                        <h4>Experimental Book Projects (22 September 2023)</h4>
+                        <h4>Thoth and Metadata (24 November 2023)</h4>
                         <p>
-                        If you want to join us, drop us a note at <a href="mailto:info@scholarled.org">info@scholarled.org</a> with the name and website of your publishing house and a person we can contact. The ScholarLed board assesses applications on a running basis, but please be patient with us. Our recommended membership contribution is currently 50€ per year. This covers the basic running costs of our fledgling organisation, which is registered as a not-for-profit foundation in the Netherlands. If you want to know more about how we govern ourselves, have a look at our <a href="/constitution.html">bylaws</a>.
-                        </p>
+           
                     </div>
 
                 </div>
 
             </div>
         </section>
-        <!--End of Join-->
+        <!--End of Salon-->
 
     </main>
     <!--End Main Content Area-->
