--- a/salon.html
+++ b/salon.html
@@ -192,7 +192,7 @@
                         <h3>SALON</h3>
                         <h2 class="section-title">The ScholarLed Salon</h2>
                         <p>
-                        The ScholarLed Salon series is an every-other-month gathering of scholar-led presses, devoted to informal discussion and knowledge-sharing. <a href="https://scholarled.org">ScholarLed</a> is a consortium of open access book publishers providing ways for scholar-led open access presses to grow and flourish through mutual support. The Salon workshops—offered in the spirit of "brown bag" gatherings—feature a rotating cast of topics of interest to the community. The sessions are open to anyone interested in scholar-led publishing. Occasional sessions will be cross-organized with the <a href="https://openaccessbooksnetwork.hcommons.org">Open Access Books Network</a>.
+                        The ScholarLed Salon series is an every-other-month gathering of scholar-led presses, devoted to informal discussion and knowledge-sharing. The Salon workshops—offered in the spirit of "brown bag" gatherings—feature a rotating cast of topics of interest to the community. The sessions are open to anyone interested in scholar-led publishing. Occasional sessions will be cross-organized with the <a href="https://openaccessbooksnetwork.hcommons.org">Open Access Books Network</a>.
                         </p>
                         
                         <h2>Schedule and Zoom link</h2> 
