--- a/salon.html
+++ b/salon.html
@@ -195,7 +195,7 @@
                         The ScholarLed Salon series is an every-other-month gathering of scholar-led presses, devoted to informal discussion and knowledge-sharing. The Salon workshops—offered in the spirit of "brown bag" gatherings—feature a rotating cast of topics of interest to the community. The sessions are open to anyone interested in scholar-led publishing. Occasional sessions will be cross-organized with the <a href="https://openaccessbooksnetwork.hcommons.org">Open Access Books Network</a>.
                         </p>
                         
-                        <h2>Schedule and Zoom link</h2> 
+                        <h2>Schedule</h2> 
                         <p><em>Fourth Friday, every other month, 12:00 UTC</em></p>
                         <p><em>Beginning in 2024: Third Thursday, every other month, 4:00 UTC</em></p>
                         <!--Call to Action-->
