Update home page

--- a/index.html
+++ b/index.html
@@ -197,13 +197,14 @@
                     We have established a <a href="https://www.oapen.org/topic/15632108-scholarled" target="_blank">ScholarLed catalogue</a> on OAPEN, which includes the hundreds of open access books published by our presses. We have developed a <a href="https://github.com/ScholarLed/bookstand" target="_blank">lightweight bookstand</a>, which each publisher possesses, allowing us to showcase the output of the whole consortium at conferences and events. (The design and instructions to create your own version of the bookstand, as well as the source code of our website, are freely available for other presses to use <a href="#more">here on our website</a>.) We are also key partners in the international <a href="#infrastructure">COPIM project</a>, building community-owned, open systems and infrastructures to enable open access book publishing to flourish. Finally, we are exploring how ScholarLed can organise ourselves more formally as an entity, and how we might be able to support more academic-led presses in a direct way, perhaps by taking on new members (for more on this, see Parts <a href="https://www.oapen.org/blog/?link=https%3A%2F%2Foapen.hypotheses.org%2F93" target="_blank">One</a> and <a href="https://oapen.org/blog/?link=https%3A%2F%2Foapen.hypotheses.org%2F99" target="_blank">Two</a> of our roundtable blog post with our friends at OAPEN).
                     </p>
                     <p>
-                    We invite you to stay in touch with our work by reading our <a href="https://blog.scholarled.org/" target="_blank">blog posts</a>, following us on <a href="https://twitter.com/ScholarLed" target="_blank">Twitter</a>, and checking out <a href="#members" target="_blank">our member presses</a>.
+                    We invite you to stay in touch with our work by reading our <a href="https://blog.scholarled.org/" target="_blank">blog posts</a>, following us on <a href="https://twitter.com/ScholarLed" target="_blank">X</a>, and checking out <a href="#members" target="_blank">our member presses</a>. ScholarLed also offers a <a href="https://openbookcollective.org/view/collections/2/">package</a> on the <a href="https://openbookcollective.org">Open Book Collective</a>, the sustainable funding platform for open access books.
                     </p>
                 </div>
 
                 <!--Call to Action-->
                 <a href="mailto:info@scholarled.org" class="button">CONTACT US</a>
                 <a href="https://simonxix.github.io/scholarled_catalogue/" class="button" style="margin-left: 5px;">OUR BOOKS</a>
+                <a href="https://openbookcollective.org/view/collections/2/" class="button">SUPPORT US</a>
                 <!--End Call to Action-->
 
             </div>
