--- a/salon.html
+++ b/salon.html
@@ -196,7 +196,7 @@
                         </p>
                         
                         <h2>Schedule</h2> 
-                        <p><em>Third Thursday, every other month, 4:00 UTC</em></p>
+                        <p><em>Third Thursday, every other month, 17:00 GMT</em></p>
                         <!--Call to Action-->
                         <a href="mailto:info@scholarled.org" class="button">QUESTIONS </a>
                         <!--End Call to Action-->
