--- a/salon.html
+++ b/salon.html
@@ -202,11 +202,17 @@
                         <!--End Call to Action-->
                         <br>
                         <h2>Upcoming sessions</h2>
-                        <h3>EXPERIMENTAL PUBLISHING (18 January 2024)</h3>
-
+                        
+                        <h3>USAGE ANALYTICS (28 March 2024)</h3>
+                        <br>
+                        <h3>WHAT IS SCHOLAR-LED? (16 May 2024)</h3>
+                        <br>
+                        <h3>FAIR USE/FAIR DEALING (18 July 2024)</h3>
                         <br>
                         
                         <h2>Past sessions</h2> 
+                        <h3>EXPERIMENTAL PUBLISHING (18 January 2024)</h3>
+                        <br>
                         <h3>PEER REVIEW (24 November 2023)</h3>
                         <br>
                         <h3>THOTH AND METADATA (17 September 2023)</h3>
