Update salon page

--- a/salon.html
+++ b/salon.html
@@ -196,15 +196,14 @@
                         <!--End Call to Action-->
                         <br>
                         <h2>Upcoming sessions</h2>
-                        
-
                         <br>
-                        <h3>WHAT IS SCHOLAR-LED? (Thursday, 23 May 2024, 15:00 GMT)</h3>
-                        <br>
-                        <h3>FAIR USE/FAIR DEALING (Thursday 18 July 2024, 15:00 GMT)</h3>
+                        <h3>FAIR USE/FAIR DEALING (Thursday 18 July 2024, 16:00 GMT)</h3>
                         <br>
                         
                         <h2>Past sessions</h2> 
+                        <br>
+                        <h3><a href="https://scholarled.pubpub.org/pub/salon-links#what-is-scholar-led-22-may-2024
+">WHAT IS SCHOLAR-LED?</a> (23 May 2024)</h3>
                         <br>
                         <h3><a href="https://scholarled.pubpub.org/pub/salon-links#usage-analytics-28-march-2024">USAGE ANALYTICS</a> (28 March 2024)</h3>
                         <br>
