Update salon listing

--- a/salon.html
+++ b/salon.html
@@ -197,7 +197,7 @@
                         <br>
                         <h2>Upcoming sessions</h2>
                         <br>
-                        <h3>FAIR USE/FAIR DEALING (Thursday 18 July 2024, 16:00 GMT)</h3>
+                        <h3>FAIR USE/FAIR DEALING (date and time TBA)</h3>
                         <br>
                         
                         <h2>Past sessions</h2> 
